{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 53,
  "lineage": "98579a51-23f5-24ae-ce48-dd7358cdeb62",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/regions/us-central1/networkEndpointGroups/serverless-neg-tomcat",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-30T11:24:09.295-07:00",
            "enable_cdn": false,
            "fingerprint": "7chh83FI8iA=",
            "generated_id": 1328338378768552230,
            "id": "projects/nonprod-424912/global/backendServices/tomcat-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "tomcat-backend",
            "port_name": "http",
            "project": "nonprod-424912",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/backendServices/tomcat-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.tomcat",
            "google_compute_region_network_endpoint_group.serverless_neg_tomcat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-30T11:29:01.909-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/backendServices/tomcat-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "0kYAJE02lNo=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "toomcat.private.net"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/nonprod-424912/global/urlMaps/url-map",
            "map_id": 692239677687893506,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/backendServices/tomcat-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/backendServices/tomcat-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "nonprod-424912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.tomcat",
            "google_compute_backend_service.tomcat",
            "google_compute_region_network_endpoint_group.serverless_neg_tomcat"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/regions/us-central1/networkEndpointGroups/serverless-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-30T10:36:09.517-07:00",
            "enable_cdn": false,
            "fingerprint": "0FeM7StCDj0=",
            "generated_id": 6124074483247782502,
            "id": "projects/nonprod-424912/global/backendServices/tf-cr-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "tf-cr-lb-backend-default",
            "port_name": "http",
            "project": "nonprod-424912",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/backendServices/tf-cr-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.110.204.19",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-30T10:33:11.264-07:00",
            "effective_labels": {
              "example-label": "cloud-run-example"
            },
            "id": "projects/nonprod-424912/global/addresses/tf-cr-lb-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "tf-cr-lb-address",
            "prefix_length": 0,
            "project": "nonprod-424912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/addresses/tf-cr-lb-address",
            "terraform_labels": {
              "example-label": "cloud-run-example"
            }
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "effective_labels": {
              "example-label": "cloud-run-example"
            },
            "id": "projects/nonprod-424912/global/forwardingRules/tf-cr-lb",
            "ip_address": "34.110.204.19",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "tf-cr-lb",
            "port_range": "80-80",
            "project": "nonprod-424912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/forwardingRules/tf-cr-lb",
            "target": "https://www.googleapis.com/compute/beta/projects/nonprod-424912/global/targetHttpProxies/tf-cr-lb-http-proxy",
            "terraform_labels": {
              "example-label": "cloud-run-example"
            }
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-30T10:36:55.453-07:00",
            "id": "projects/nonprod-424912/global/targetHttpProxies/tf-cr-lb-http-proxy",
            "name": "tf-cr-lb-http-proxy",
            "project": "nonprod-424912",
            "proxy_bind": false,
            "proxy_id": 4683310815993174616,
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/targetHttpProxies/tf-cr-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/urlMaps/tf-cr-lb-url-map"
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-30T10:36:42.902-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/backendServices/tf-cr-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "r30SUiOFa3I=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/nonprod-424912/global/urlMaps/tf-cr-lb-url-map",
            "map_id": 210571619566131781,
            "name": "tf-cr-lb-url-map",
            "path_matcher": [],
            "project": "nonprod-424912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nonprod-424912/global/urlMaps/tf-cr-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}